Add jdk.internal.misc.Unsafe examples